--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@ iframe {
     height: 50px;
 }
 .bg,.bg2{
-    background-size: cover;
+    background-size: 40vh;
     height:40vh;
 }
 .bg::after,.bg2::after{
