--- a/index.html
+++ b/index.html
@@ -584,6 +584,7 @@ iframe {
 }
 .bg,.bg2{
     background-size: 75vh;
+    background-position:center center;
     height:40vh;
 }
 .bg::after,.bg2::after{
