--- a/index.html
+++ b/index.html
@@ -741,7 +741,7 @@ iframe {
             if (currentStep === 0) {
                 setBannerImage(banner2, 'img/58.jpg');
             } else if (currentStep === 1) {
-                setBannerImage(banner2, 'img/59.jpg');
+                setBannerImage(banner2, 'img/59.JPG');
             } else if (currentStep === 2) {
                 setBannerImage(banner2, 'img/58.jpg');
             }
